--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Ajith P - DevOps Engineer | Cloud & Automation Enthusiast" />
     <meta property="og:description" content="Aspiring DevOps Engineer and Cloud Enthusiast. Recent B.Tech Computer Science graduate specializing in AWS, Docker, Terraform, and CI/CD pipelines." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.postimg.cc/B6Qs1Q54/photo-1.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <meta name="twitter:image" content="https://i.postimg.cc/B6Qs1Q54/photo-1.jpg" />
   </head>
 
   <body>
