--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ajith Kumar - Portfolio</title>
+  <title>Ajith P- Portfolio</title>
   <script>
     // GitHub Pages SPA redirect script
     // Store the current URL path and redirect to index.html with the path as a hash
